[package]
name = "KE_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minigrep"
path = "mingrep/main.rs"


[[bin]]
name = "number-guessing-game"
path = "numbers/main.rs"

[dependencies]
color-eyre = "0.6.2"
eframe = "0.21.2"
egui = "0.21.0"
owo-colors = "3.5.0"
rand = "0.8.5"
